# zg-panel

./: .gitignore  index.html  package-lock.json  package.json  proxy_fix.py  tailwind.config.js  vitest.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  i18n.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: device.rs  lib.rs  main.rs  protobuf.rs  quota.rs
src-tauri/src/modules/: db.rs  logger.rs  mod.rs  process.rs  version.rs
src/components/accounts/: AccountCard.tsx  AccountGrid.tsx  AccountTable.tsx  AddAccountDialog.tsx  QuotaItem.tsx
src/components/common/: ThemeManager.test.ts  ThemeManager.tsx
src/components/debug/: DebugConsole.tsx
src/components/layout/: Layout.tsx
src/components/navbar/: NavLogo.tsx  NavSettings.tsx  Navbar.tsx  constants.ts
src/locales/: en.json  zh.json
src/pages/: Accounts.tsx  ApiProxy.tsx  CanvasPage.tsx  Chat.tsx  Dashboard.test.tsx  Dashboard.tsx  Logs.tsx  ProxyLayer.tsx  Settings.tsx
src/services/: accountService.test.ts  accountService.ts  configService.test.ts  configService.ts
src/stores/: useAccountStore.ts
src/types/: account.ts
src/utils/: request.ts
